kustomize/components/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: main-ingress
  namespace: main
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
      #cert-manager.io/cluster-issuer: "letsencrypt-prod"
    cert-manager.io/cluster-issuer: "letsencrypt-staging"
    kubernetes.io/ingress.allow-http: "false"
spec:
  tls:
  - hosts:
    - main.providehighvalue.com
    secretName: main-tls
  ingressClassName: nginx
  rules:
  - host: main.providehighvalue.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: django-service
            port:
              number: 8000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    kubernetes.io/ingress.allow-http: "false"
spec:
  tls:
  - hosts:
    - shop.providehighvalue.com
    - blog.providehighvalue.com
    secretName: app-tls
  ingressClassName: nginx
  rules:
  - host: shop.providehighvalue.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80
  - host: blog.providehighvalue.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: wordpress
            port:
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: game-ingress
  namespace: game
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    kubernetes.io/ingress.allow-http: "false"
spec:
  tls:
  - hosts:
    - 2048.providehighvalue.com
    secretName: game-tls
  ingressClassName: nginx
  rules:
  - host: 2048.providehighvalue.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: deployment-2048
            port:
              number: 10000
